<resources>
    <string name="app_name">DMHelper</string>

    <string name="action_settings">Settings</string>
    <string name="skill_button">Skills</string>
    <string name="feats_button">Feats</string>
    <string name="racial_button"><![CDATA[Racial & Class Features]]></string>
    <string name="languages_button">Languages</string>
    <string name="magic_button">Magic</string>
    <string name="spells_button">Spells</string>
    <string name="inventory_button">Inventory</string>
    <string name="companion_button">Companions</string>
    <string-array name="DnDClasses">
        <item></item>
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Psion</item>
        <item>Psychic Warrior</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Soulknife</item>
        <item>Wilder</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="DnDRaces">
        <item></item>
        <item>Hill Dwarf</item>
        <item>High Elf</item>
        <item>Gnome</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Halfling</item>
        <item>Human</item>
    </string-array>
    <string-array name="DnDAllignment">
        <item></item>
        <item>Lawful Good</item>
        <item>Lawful Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Good</item>
        <item>Neutral</item>
        <item>Neutral Evil</item>
        <item>Chaotic Good</item>
        <item>Chaotic Neutral</item>
        <item>Chaotic Evil</item>
    </string-array>
    <string name="title_activity_edit_health_popup">EditHealthPopup</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_xp_popup">EditXpPopup</string>
    <string name="title_activity_load_new">LoadNewActivity</string>
    <string name="title_activity_new_adventure">NewAdventureActivity</string>
</resources>
